--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -3,47 +3,58 @@
 
 @string{aps = {American Physical Society,}}
 
-@article{spherical_joint_analysis_2024,
+@article{chandramouli2025spherical_joint,
   title={A Comprehensive Analysis of the Spherical Joint in A 6-6 Stewart-Gough Platform Manipulator and its Effects on the Joint Limit Compliant Workspace},
   author={Chandramouli, Nishanth Adithya and Bandyopadhyay, Sandipan},
-  year={2024},
+  year={2025},
   journal={SSRN},
-  url={https://papers.ssrn.com/sol3/papers.cfm?abstract_id=xxxxx},
-  selected={true},
+  doi={10.2139/ssrn.5405137},
+  html={https://dx.doi.org/10.2139/ssrn.5405137},
+  pdf={https://papers.ssrn.com/sol3/Delivery.cfm/SSRN_ID5405137_code.pdf},
+  abstract={This paper presents a comprehensive study of the spherical joint behavior in a 6-6 Stewart-Gough platform, focusing on joint limit constraints and their effect on the joint-limit-compliant workspace...},
   bibtex_show={true},
-  thumbnail={spherical_joint.png}
+  selected={true},
+  thumbnail={s4.png}
 }
 
-@article{collision_free_sphere_2024,
+@article{chandramouli2025collision_free_sphere,
   title={A Semi-Analytical Approach Towards Determining the Largest Collision-Free Sphere in $\mathbb{R}^3$ Inside the Effective Regular Workspace of a 6-6 Stewart-Gough Platform Manipulator Corresponding to a Given Orientation Workspace},
   author={Chandramouli, Nishanth Adithya and Bandyopadhyay, Sandipan},
-  year={2024},
+  year={2025},
   journal={SSRN},
-  url={https://papers.ssrn.com/sol3/papers.cfm?abstract_id=xxxxx},
-  selected={true},
+  doi={10.2139/ssrn.5766082},
+  html={https://dx.doi.org/10.2139/ssrn.5766082},
+  pdf={https://papers.ssrn.com/sol3/Delivery.cfm/SSRN_ID5766082_code.pdf},
+  abstract={This work introduces a semi-analytical formulation to compute the largest collision-free sphere within the effective regular workspace of a 6-6 Stewart-Gough platform manipulator for a given orientation...},
   bibtex_show={true},
-  thumbnail={collision_free.png}
+  selected={true},
+  thumbnail={s3.png}
 }
 
-@inproceedings{path_planning_stewart_2024,
+@article{chandramouli2025delamination,
+  title={Modelling and prediction of delamination during the end-milling of glass fibre reinforced polymer composites using response surface methodology and least squares support vector machine},
+  author={Chandramouli, Nishanth Adithya and Others},
+  journal={Pigment \& Resin Technology},
+  year={2025},
+  doi={10.1108/PRT-10-2024-0108},
+  html={https://doi.org/10.1108/PRT-10-2024-0108},
+  pdf={https://www.emerald.com/insight/content/doi/10.1108/PRT-10-2024-0108/full/pdf},
+  abstract={This study investigates delamination in GFRP composite machining using a hybrid modelling framework integrating RSM and LSSVM...},
+  bibtex_show={true},
+  selected={true},
+  thumbnail={delamination.png}
+}
+
+
+@inproceedings{chandramouli2024stewart_path,
   title={Multi-Objective Path Planning for the 6-6 Stewart Platform Manipulator Using the Singularity-Free Tube},
   author={Chandramouli, Nishanth Adithya and Bandyopadhyay, Sandipan},
   booktitle={International Conference on Intelligent and Progressive Robotics, Mechatronics, and Manufacturing (IPRoMM)},
   year={2024},
-  url={https://example.com/ipromm2024paper},
-  selected={true},
+  html={https://example.com/ipromm2024},
+  pdf={https://example.com/ipromm2024/paper.pdf},
+  abstract={This paper proposes a multi-objective path planning strategy for the 6-6 Stewart platform using the singularity-free tube approach...},
   bibtex_show={true},
-  thumbnail={stewart_path.png}
-}
-
-@article{delamination_prediction_2023,
-  title={Modelling and prediction of delamination during the end-milling of glass fibre reinforced polymer composites using response surface methodology and least squares support vector machine},
-  author={Chandramouli, Nishanth Adithya and Others},
-  journal={Pigment \& Resin Technology},
-  year={2023},
-  doi={10.xxxx/prt.xxxxx},
   selected={true},
-  bibtex_show={true},
-  thumbnail={delamination.png}
+  thumbnail={sft.png}
 }
-
