--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -49,7 +49,7 @@
 @inproceedings{chandramouli2024stewart_path,
   title={Multi-Objective Path Planning for the 6-6 Stewart Platform Manipulator Using the Singularity-Free Tube},
   author={Chandramouli, Nishanth Adithya and Bandyopadhyay, Sandipan},
-  booktitle={International Conference on Intelligent and Progressive Robotics, Mechatronics, and Manufacturing (IPRoMM)},
+  booktitle={International Conference on Industrial Problems on Machines and Mechanisms (IPRoMM)},
   year={2024},
   html={https://example.com/ipromm2024},
   pdf={https://example.com/ipromm2024/paper.pdf},
