--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -41,7 +41,7 @@
   pdf={https://www.emerald.com/insight/content/doi/10.1108/PRT-10-2024-0108/full/pdf},
   abstract={This study investigates delamination in GFRP composite machining using a hybrid modelling framework integrating RSM and LSSVM...},
   bibtex_show={true},
-  selected={true},
+  selected={false},
   thumbnail={delamination.png}
 }
 
@@ -51,10 +51,10 @@
   author={Chandramouli, Nishanth Adithya and Bandyopadhyay, Sandipan},
   booktitle={International Conference on Industrial Problems on Machines and Mechanisms (IPRoMM)},
   year={2024},
-  html={https://example.com/ipromm2024},
+  html={https://ipromm2024.ammindia.org/},
   pdf={https://example.com/ipromm2024/paper.pdf},
   abstract={This paper proposes a multi-objective path planning strategy for the 6-6 Stewart platform using the singularity-free tube approach...},
   bibtex_show={true},
-  selected={true},
+  selected={false},
   thumbnail={sft.png}
 }
