--- a/_bibliography/papers.bib
+++ b/_bibliography/papers.bib
@@ -11,7 +11,7 @@
   doi={10.2139/ssrn.5405137},
   html={https://dx.doi.org/10.2139/ssrn.5405137},
   pdf={https://papers.ssrn.com/sol3/Delivery.cfm/SSRN_ID5405137_code.pdf},
-  abstract={This paper presents a comprehensive study of the spherical joint behavior in a 6-6 Stewart-Gough platform, focusing on joint limit constraints and their effect on the joint-limit-compliant workspace...},
+  abstract={This article presents a comprehensive study of the effect of motions limits of the passive joints on a parallel manipulator on its workspace. The formulation is developed and demonstrated in the context of a fully spatial parallel manipulator, namely, the Stewart-Gough platform manipulator, which incorporates passive joints of spherical nature. The largest spherical subset of the position workspace free of the above-mentioned issue is referred to as the joint limit compliant workspace (JLCW). For a fixed orientation of the moving platform (MP) of the manipulator, the corresponding limiting surface, which turns out to be a right-circular cone, is determined analytically. The analysis is further extended to a specified orientation workspace, albeit in a discrete manner. Subsequently, the JLCW is determined by computing the minimum enclosing cone (MECo) of a set of cones emanating from a given point. The results are verified numerically by comparing them with those obtained using other methods. A parametric study is conducted to demonstrate the practical utility of the proposed analysis.},
   bibtex_show={true},
   selected={true},
   thumbnail={s4.png}
@@ -25,7 +25,7 @@
   doi={10.2139/ssrn.5766082},
   html={https://dx.doi.org/10.2139/ssrn.5766082},
   pdf={https://papers.ssrn.com/sol3/Delivery.cfm/SSRN_ID5766082_code.pdf},
-  abstract={This work introduces a semi-analytical formulation to compute the largest collision-free sphere within the effective regular workspace of a 6-6 Stewart-Gough platform manipulator for a given orientation...},
+  abstract={This article focusses on the problem of interference among the links of a parallel robot, namely, the StewartGough platform manipulator. The geometry of the legs is approximated by capsules, leading to the detection of collision among any pair of legs in terms of tangency of the corresponding capsules. Analytical conditions for the said cases of tangency are derived in closed-form, which manifest geometrically as certain quadrics in space. Through a thorough study and explicit characterisation of these surfaces, novel analytical methods are developed to find the largest spheres in space which are tangent to these surfaces. Such spheres are free of possibilities of link collisions, and they can be derived analytically for a given orientation of the moving platform of the manipulator. The analysis is subsequently extended to the orientation workspace of the manipulator by repeating the above-mentioned computations over a large number of discrete samples. The results obtained are verified numerically by comparing them with those generated from other sources. A parametric study is performed to demonstrate the utility of the proposed analysis in practice.},
   bibtex_show={true},
   selected={true},
   thumbnail={s3.png}
@@ -39,7 +39,7 @@
   doi={10.1108/PRT-10-2024-0108},
   html={https://doi.org/10.1108/PRT-10-2024-0108},
   pdf={https://www.emerald.com/insight/content/doi/10.1108/PRT-10-2024-0108/full/pdf},
-  abstract={This study investigates delamination in GFRP composite machining using a hybrid modelling framework integrating RSM and LSSVM...},
+  abstract={The purpose of this study is to develop a mathematical model for predicting the phenomenon of delamination during end milling of glass fibre reinforced polymer (GFRP) composite laminates. Detailed investigations were carried out using response surface methodology (RSM) to evaluate the effect on delamination and to predict the performance and interactions of the input parameters, namely cutting speed, feed rate and depth of cut. A least square support vector machine (LS-SVM), a supervised machine learning algorithm, was used to build the predictive model with the same set of milling parameters as inputs and the delamination factor as the output response. Different tuning settings and regularization of data were used for analysis and comparison of the model’s performance. In comparison to the regression model developed using RSM, the results of the LS-SVM model show that it is more reliable and accurate in predicting the delamination factor during end milling of GFRP composites.},
   bibtex_show={true},
   selected={false},
   thumbnail={delamination.png}
@@ -52,8 +52,8 @@
   booktitle={International Conference on Industrial Problems on Machines and Mechanisms (IPRoMM)},
   year={2024},
   html={https://ipromm2024.ammindia.org/},
-  pdf={https://example.com/ipromm2024/paper.pdf},
-  abstract={This paper proposes a multi-objective path planning strategy for the 6-6 Stewart platform using the singularity-free tube approach...},
+  pdf={https://drive.google.com/file/d/1q8xP-XxqOUREc8ARc2X7bdYVZnZgR0Q4/view?usp=drive_link},
+  abstract={A multi-objective approach for constant-orientation singularity-free path planning for the 6-6 semi-regular Stewart platform manipulator (SRSPM) is presented in this paper. The concept of thesingularity-freetube (SFT), which is described as a one-parametric family of singularity-free spheres, is utilised to ensure that the obtained paths are free of any gain-type singularities. Non-Dominated Sorting Genetic Algorithm(NSGA-II) is used to obtain a set of optimal paths connecting two given points while minimising its length and maximising its distancefromthe boundary ofthe SFT.},
   bibtex_show={true},
   selected={false},
   thumbnail={sft.png}
